
2009-04-27	Denis M. Gabaidulin

	* main/Charts/Google/GoogleChartData.class.php: getCount() added.

2009-04-25	Vladlen Y. Koshelev

	* core/Logic/InExpression.class.php: MappableObject support added.

2009-04-23	Denis M. Gabaidulin

	* main/Charts/Google/: experimental support for Data point labels API.

2009-04-20	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: makeCartesianProduct() support
	assoc arrays.

2009-04-17	Denis M. Gabaidulin

	* main/Utils/SortHelper.class.php: customizable cmp function.

2009-04-16	Vladlen Y. Koshelev

	* core/OSQL/OrderBy.class.php, test/main/CriteriaTest.class.php:
	nullsLast(), isNullsFirst() fixed; support for clone and toMapped() for
	nulls ordering feature added; corresponding tests added.

2009-04-08	Denis M. Gabaidulin

	* main/Charts/Google/GoogleChartTitle.class.php: added.

2009-04-07	Denis M. Gabaidulin

	* main/Base/BaseRange.class.php: common numeric range logic extracted.

	* main/Base/FloatRange.class.php: float range implemention.

2009-04-08	Vladlen Y. Koshelev

	* main/Utils/ClassUtils.class.php, test/main/ClassUtilsTest.class.php:
	isClassName() returns boolen.

2009-04-07	Denis M. Gabaidulin

	* main/Charts/Google/: chart line styles implemented.

	* main/Charts/Google/GoogleGridedLineChart.class.php: added.

2009-04-06	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: alignByBase() added.

2009-04-05	Sergey S. Sergeev

	* main/Utils/Routers, test/main/Utils/Routers: utils for rewriting 
	urls moved from incubator.

2009-04-04	Denis M. Gabaidulin

	* main/Charts/Google/: Google charts implementation (partially) moved
	from incubator.

2009-04-01	Ivan Y. Khvostishkov

	* main/EntityProto/Builders/DirectoryToObjectBinder.class.php,
	main/EntityProto/Builders/ObjectToDirectoryBinder.class.php:
	reference-enabled directory storage with symbolic links (even
	recursive). See test/main/EntityProtoConvertersTest.class.php for
	example of usage.
